src/test/run-pass/dead-code-one-arm-if.rs



// -*- rust -*-
fn main() { if 1 == 1 { return; } debug!("Paul is dead"); }
